Bug 1849315 - Apply correct style on unread badge when a collapsed parent folder has unread messages and a subfolder with read messages. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D205625

--HG--
extra : rebase_source : 06c99d888fd9e53ce7c2ec6fbf48ee135f5ad584

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -619,14 +619,14 @@ body {
     background-color: var(--folderpane-unread-new-count-background);
   }
 
-  .unread.children.collapsed > .container > & {
+  .unread.children.collapsed:has(ul > .unread) > .container > & {
     color: var(--folderpane-unread-count-background);
     background-color: transparent;
     border: 1px solid var(--folderpane-unread-count-background);
     padding-block: 0;
   }
 
-  .new-messages.unread.children.collapsed > .container > & {
+  .new-messages.unread.children.collapsed:has(ul > .new-messages) > .container > & {
     color: var(--folderpane-unread-new-count-background);
     border-color: var(--folderpane-unread-new-count-background);
   }
